tests/view/snapshots/r#mod__view__input_parser__should_ignore_body_inputs_in_GET_request.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: GET
      headers: {}
      body: ""

