tests/view/snapshots/r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-2.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SubmitRequest:
    request:
      url:
        ValidatedUrl:
          protocol: ~
          host: url.com
          port: ~
          paths: []
          query_params: []
          anchor: ~
      method: POST
      headers: {}
      body: ""

