tests/view/snapshots/r#mod__view__input_parser__should_parse_all_methods_subcommands_to_normal_submits-3.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SubmitRequest:
    request:
      url: "http://url.com"
      method: PUT
      headers: {}
      body: ""

