tests/view/snapshots/r#mod__view__input_parser__should_parse_to_normal_GET_submit_without_passing_method_as_subcommand_and_no_body.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SubmitRequest:
    request:
      url: "http://url.com"
      method: GET
      headers: {}
      body: ""

