tests/view/snapshots/r#mod__view__input_parser__should_parse_to_normal_POST_submit_without_passing_method_as_subcommand_but_passing_some_body_data.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SubmitRequest:
    request:
      url: "http://url.com"
      method: POST
      headers: {}
      body: "{\"Hello\":\"World\"}"

