tests/view/snapshots/r#mod__view__input_parser__should_persist_snapshot_to_edit-3.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SaveRequest:
    request_name: url.com
    request_data:
      url: ~
      method: ~
      headers:
        Auth: "'Bearer"
      body: "{\"Hello\":\"World\",\"name\":\"Bob\"}"
    check_exists_before: true

