tests/view/snapshots/r#mod__view__input_parser__should_persist_snapshot_to_edit.snap
---
source: tests/view/input_parser.rs
expression: result
---
- SaveRequest:
    request_name: url.com
    request_data:
      url: ~
      method: ~
      headers: ~
      body: ~
    check_exists_before: true

